force-app/main/default/objects/ADM_Perforce_Connector__c/fields/Changelist__c.field-meta.xml
<CustomField>
    <fullName>Changelist__c</fullName>
    <label>Change List</label>
    <length>32</length>
    <type>Text</type>
</CustomField>