force-app/main/default/objects/ADM_Perforce_Connector__c/fields/Describe__c.field-meta.xml
<CustomField>
    <fullName>Describe__c</fullName>
    <label>Describe</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>