force-app/main/default/objects/ADM_Perforce_Connector__c/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <description>CL@workId</description>
    <externalId>true</externalId>
    <inlineHelpText>CL@workId</inlineHelpText>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>