force-app/main/default/objects/ADM_Perforce_Connector__c/fields/Release__c.field-meta.xml
<CustomField>
    <fullName>Release__c</fullName>
    <label>Release</label>
    <length>32</length>
    <type>Text</type>
</CustomField>