force-app/main/default/objects/ADM_Perforce_Connector__c/fields/type__c.field-meta.xml
<CustomField>
    <fullName>type__c</fullName>
    <label>type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>one</fullName>
                <default>true</default>
                <label>one</label>
            </value>
            <value>
                <fullName>three</fullName>
            </value>
            <value>
                <fullName>two</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>