force-app/main/default/objects/ADM_Perforce_Connector__c/fields/Work__c.field-meta.xml
<CustomField>
    <fullName>Work__c</fullName>
    <label>Work</label>
    <length>32</length>
    <type>Text</type>
</CustomField>