force-app/main/default/objects/ADM_Perforce_Connector__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Changelist__c</columns>
    <columns>Describe__c</columns>
    <columns>Release__c</columns>
    <columns>Work__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>